--- a/package.json
+++ b/package.json
@@ -1,45 +1,48 @@
 {
-  "name": "is-archive",
-  "version": "1.0.1",
-  "description": "Check if a filepath is an archive file",
-  "license": "MIT",
-  "repository": "sindresorhus/is-archive",
-  "author": {
-    "name": "Sindre Sorhus",
-    "email": "sindresorhus@gmail.com",
-    "url": "sindresorhus.com"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  },
-  "scripts": {
-    "test": "ava"
-  },
-  "files": [
-    "index.js"
-  ],
-  "keywords": [
-    "ext",
-    "extensions",
-    "extension",
-    "file",
-    "path",
-    "check",
-    "detect",
-    "is",
-    "archive",
-    "compressed",
-    "compress",
-    "archive",
-    "zip",
-    "tar",
-    "rar",
-    "7z"
-  ],
-  "dependencies": {
-    "archive-extensions": "^1.0.0"
-  },
-  "devDependencies": {
-    "ava": "*"
-  }
+	"name": "is-archive",
+	"version": "1.0.1",
+	"description": "Check if a filepath is an archive file",
+	"license": "MIT",
+	"repository": "sindresorhus/is-archive",
+	"author": {
+		"name": "Sindre Sorhus",
+		"email": "sindresorhus@gmail.com",
+		"url": "sindresorhus.com"
+	},
+	"engines": {
+		"node": ">=8"
+	},
+	"scripts": {
+		"test": "xo && ava && tsd"
+	},
+	"files": [
+		"index.js",
+		"index.d.ts"
+	],
+	"keywords": [
+		"ext",
+		"extensions",
+		"extension",
+		"file",
+		"path",
+		"check",
+		"detect",
+		"is",
+		"archive",
+		"compressed",
+		"compress",
+		"archive",
+		"zip",
+		"tar",
+		"rar",
+		"7z"
+	],
+	"dependencies": {
+		"archive-extensions": "^2.0.0"
+	},
+	"devDependencies": {
+		"ava": "^1.4.1",
+		"tsd": "^0.7.2",
+		"xo": "^0.24.0"
+	}
 }
